[package]
name = "pallet-uniques"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME NFT asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# [dependencies]
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
# scale-info = { version = "1.0", default-features = false, features = ["derive"] }
# sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
# sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
# frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
# frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
# frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }

# [dev-dependencies]
# sp-std = { version = "4.0.0-dev", path = "../../primitives/std" }
# sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
# sp-io = { version = "4.0.0-dev", path = "../../primitives/io" }
# pallet-balances = { version = "4.0.0-dev", path = "../balances" }

# [features]
# default = ["std"]
# std = [
# 	"codec/std",
# 	"scale-info/std",
# 	"sp-std/std",
# 	"sp-runtime/std",
# 	"frame-support/std",
# 	"frame-system/std",
# 	"frame-benchmarking/std",
# ]
# runtime-benchmarks = [
# 	"frame-benchmarking",
# 	"sp-runtime/runtime-benchmarks",
# 	"frame-system/runtime-benchmarks",
# ]
# try-runtime = ["frame-support/try-runtime"]



[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dev-dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
    'codec/std',
    'scale-info/std',
	"sp-std/std",
	"sp-runtime/std",    
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']